--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@900&family=Poppins:wght@400;500;900&display=swap');
 
 html {
   scroll-behavior: smooth;
-}
+};
 
 body {
   margin: 0;
